--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
     "angular-sanitize": "^1.3.0",
     "angular-smart-table": "~2.1.3",
     "angular-touch": "^1.3.0",
-    "bootstrap": "^3.2.0",
-    "ng-table": "~0.8.3"
+    "bootstrap": "^3.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
